--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h2 id="info"></h2>
     <ul id="list">
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim deserunt aliquid libero totam. Iure illo sit nobis rerum, quam iusto consequuntur accusantium quas accusamus maiores et in provident assumenda expedita.</li>
         <li>Vel, asperiores corporis. Sequi sint inventore molestiae hic labore neque ab voluptatum optio dolorem vero a reiciendis ea illum expedita dolor minima assumenda harum corporis animi, mollitia veritatis? Beatae, sequi!</li>
@@ -16,4 +17,5 @@
 <script src="./02-variables.js"></script>
 <script src="./number-data.js"></script>
 <script src="./lastelement.js"></script>
+<script src="./ternary-logical-operators.js"></script>
 </html>
