--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h2 id="info"></h2>
     <ul id="list">
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim deserunt aliquid libero totam. Iure illo sit nobis rerum, quam iusto consequuntur accusantium quas accusamus maiores et in provident assumenda expedita.</li>
+        <li id="greeting">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim deserunt aliquid libero totam. Iure illo sit nobis rerum, quam iusto consequuntur accusantium quas accusamus maiores et in provident assumenda expedita.</li>
         <li>Vel, asperiores corporis. Sequi sint inventore molestiae hic labore neque ab voluptatum optio dolorem vero a reiciendis ea illum expedita dolor minima assumenda harum corporis animi, mollitia veritatis? Beatae, sequi!</li>
         <li>Sint facere, consequuntur nesciunt debitis culpa nemo? Velit laudantium eligendi placeat voluptatem! Et, saepe vitae ullam voluptatum maiores delectus quas nihil! Aspernatur dolorem dicta, architecto explicabo accusamus eligendi magnam hic!</li>
     </ul>
@@ -18,4 +18,5 @@
 <script src="./number-data.js"></script>
 <script src="./lastelement.js"></script>
 <script src="./ternary-logical-operators.js"></script>
+<script src="./dom.js"></script>
 </html>
