--- a/index.html
+++ b/index.html
@@ -19,4 +19,5 @@
 <script src="./lastelement.js"></script>
 <script src="./ternary-logical-operators.js"></script>
 <script src="./dom.js"></script>
+<script src="./localStorage.js"></script>
 </html>
