--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <li>Vel, asperiores corporis. Sequi sint inventore molestiae hic labore neque ab voluptatum optio dolorem vero a reiciendis ea illum expedita dolor minima assumenda harum corporis animi, mollitia veritatis? Beatae, sequi!</li>
         <li>Sint facere, consequuntur nesciunt debitis culpa nemo? Velit laudantium eligendi placeat voluptatem! Et, saepe vitae ullam voluptatum maiores delectus quas nihil! Aspernatur dolorem dicta, architecto explicabo accusamus eligendi magnam hic!</li>
     </ul>
+
+
+
+    <button id="btn">Button</button>
 </body>
 <script src="./02-variables.js"></script>
 <script src="./number-data.js"></script>
@@ -20,4 +24,5 @@
 <script src="./ternary-logical-operators.js"></script>
 <script src="./dom.js"></script>
 <script src="./localStorage.js"></script>
+<script src="./callback.js"></script>
 </html>
