--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <li>Sint facere, consequuntur nesciunt debitis culpa nemo? Velit laudantium eligendi placeat voluptatem! Et, saepe vitae ullam voluptatum maiores delectus quas nihil! Aspernatur dolorem dicta, architecto explicabo accusamus eligendi magnam hic!</li>
     </ul>
 
-
+    <div id="output">
+        
+    </div>
 
     <button id="btn">Button</button>
 </body>
@@ -25,4 +27,8 @@
 <script src="./dom.js"></script>
 <script src="./localStorage.js"></script>
 <script src="./callback.js"></script>
+<script src="./06.js"></script>
+<script src="./07.js"></script>
+<script src="./for-loops.js"></script>
+<script src="./async.js"></script>
 </html>
