new item adding with callback and make it sync

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     </ul>
 
     <div id="output">
-        
+        <li></li>
     </div>
 
     <button id="btn">Button</button>
+    <ul id="todoList"></ul>
 </body>
 <script src="./02-variables.js"></script>
 <script src="./number-data.js"></script>
@@ -31,4 +32,5 @@
 <script src="./07.js"></script>
 <script src="./for-loops.js"></script>
 <script src="./async.js"></script>
+<script src="./callback1.js"></script>
 </html>
