promise,resolve,reject,then,catch,promise.all

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <div id="output">
         <li></li>
+        <p>wait for a second...</p>
     </div>
 
     <button id="btn">Button</button>
@@ -33,4 +34,5 @@
 <script src="./for-loops.js"></script>
 <script src="./async.js"></script>
 <script src="./callback1.js"></script>
+<script src="./promise.js"></script>
 </html>
