--- a/index.html
+++ b/index.html
@@ -35,4 +35,7 @@
 <script src="./async.js"></script>
 <script src="./callback1.js"></script>
 <script src="./promise.js"></script>
+<script src="./async_await.js"></script>
+<script src="./arrow-function.js"></script>
+<script src="./function.js"></script>
 </html>
