--- a/index.html
+++ b/index.html
@@ -38,4 +38,9 @@
 <script src="./async_await.js"></script>
 <script src="./arrow-function.js"></script>
 <script src="./function.js"></script>
+<script src="./object.js"></script>
+<!-- <script src="./objects.js"></script> -->
+<script src="./parametre-return.js"></script>
+<script src="./prompt.js"></script>
+<script src="./while.js"></script>
 </html>
